--- a/_posts/2022-03-02-leetcode_专项突击_前缀和系列.md
+++ b/_posts/2022-03-02-leetcode_专项突击_前缀和系列.md
@@ -16,3 +16,813 @@ https://leetcode-cn.com/circle/discuss/JK7Dn9/
 
 https://leetcode-cn.com/circle/article/EQWhUd/
 
+https://leetcode-cn.com/problems/max-submatrix-lcci/solution/biao-zhun-by-qiang-wei-z-z3c6/
+
+
+
+# 一维前缀和
+
+### [1480\. 一维数组的动态和](https://leetcode-cn.com/problems/running-sum-of-1d-array/)
+
+
+给你一个数组 `nums` 。数组「动态和」的计算公式为：`runningSum[i] = sum(nums[0]…nums[i])` 。
+
+请返回 `nums` 的动态和。
+
+**示例 1：**
+
+```
+输入：nums = [1,2,3,4]
+输出：[1,3,6,10]
+解释：动态和计算过程为 [1, 1+2, 1+2+3, 1+2+3+4] 。
+```
+
+**示例 2：**
+
+```
+输入：nums = [1,1,1,1,1]
+输出：[1,2,3,4,5]
+解释：动态和计算过程为 [1, 1+1, 1+1+1, 1+1+1+1, 1+1+1+1+1] 。
+```
+
+**示例 3：**
+
+```
+输入：nums = [3,1,2,10,1]
+输出：[3,4,6,16,17]
+```
+
+**提示：**
+
+*   `1 <= nums.length <= 1000`
+*   `-10^6 <= nums[i] <= 10^6`
+
+
+#### Solution
+
+```python
+class Solution:
+    def runningSum(self, nums: List[int]) -> List[int]:
+        n = len(nums)
+        pre_sum = [0] * (n + 1)
+        for i in range(n):
+            pre_sum[i+1] = pre_sum[i] + nums[i]
+        return pre_sum[1:]
+```
+
+
+
+### [303\. 区域和检索 - 数组不可变](https://leetcode-cn.com/problems/range-sum-query-immutable/)
+
+
+给定一个整数数组  `nums`，处理以下类型的多个查询:
+
+1.  计算索引 `left` 和 `right` （包含 `left` 和 `right`）之间的 `nums` 元素的 **和** ，其中 `left <= right`
+
+实现 `NumArray` 类：
+
+*   `NumArray(int[] nums)` 使用数组 `nums` 初始化对象
+*   `int sumRange(int i, int j)` 返回数组 `nums` 中索引 `left` 和 `right` 之间的元素的 **总和** ，包含 `left` 和 `right` 两点（也就是 `nums[left] + nums[left + 1] + ... + nums[right]` )
+
+**示例 1：**
+
+```
+输入：
+["NumArray", "sumRange", "sumRange", "sumRange"]
+[[[-2, 0, 3, -5, 2, -1]], [0, 2], [2, 5], [0, 5]]
+输出：
+[null, 1, -1, -3]
+
+解释：
+NumArray numArray = new NumArray([-2, 0, 3, -5, 2, -1]);
+numArray.sumRange(0, 2); // return 1 ((-2) + 0 + 3)
+numArray.sumRange(2, 5); // return -1 (3 + (-5) + 2 + (-1)) 
+numArray.sumRange(0, 5); // return -3 ((-2) + 0 + 3 + (-5) + 2 + (-1))
+```
+
+**提示：**
+
+*   1 <= nums.length <= 10<sup>4</sup>
+*   -10<sup>5</sup> <= nums[i] <= 10<sup>5</sup>
+*   `0 <= i <= j < nums.length`
+*   最多调用 10<sup>4</sup> 次 `sumRange`方法
+
+
+#### Solution
+
+```python
+class NumArray:
+
+    def __init__(self, nums: List[int]):
+        n = len(nums)
+        pre_sum = [0] * (n + 1)
+        for i in range(n):
+            pre_sum[i + 1] = pre_sum[i] + nums[i]
+        self.pre_sum = pre_sum
+
+    def sumRange(self, left: int, right: int) -> int:
+        return self.pre_sum[right + 1] - self.pre_sum[left]
+```
+
+### [643\. 子数组最大平均数 I](https://leetcode-cn.com/problems/maximum-average-subarray-i/)
+
+
+给你一个由 `n` 个元素组成的整数数组 `nums` 和一个整数 `k` 。
+
+请你找出平均数最大且 **长度为 `k`** 的连续子数组，并输出该最大平均数。
+
+任何误差小于 `10<sup>-5</sup>` 的答案都将被视为正确答案。
+
+**示例 1：**
+
+```
+输入：nums = [1,12,-5,-6,50,3], k = 4
+输出：12.75
+解释：最大平均数 (12-5-6+50)/4 = 51/4 = 12.75
+```
+
+**示例 2：**
+
+```
+输入：nums = [5], k = 1
+输出：5.00000
+```
+
+**提示：**
+
+*   `n == nums.length`
+*   1 <= k <= n <= 10<sup>5</sup>
+*   -10<sup>4</sup> <= nums[i] <= 10<sup>4</sup>
+
+
+#### Solution
+
+```python
+class Solution:
+    def findMaxAverage(self, nums: List[int], k: int) -> float:
+        n = len(nums)
+        pre_sum = [0] * (n + 1)
+        for i in range(n):
+            pre_sum[i + 1] = pre_sum[i] + nums[i]
+        
+        res = float('-inf')
+        for i in range(n-k+1):
+            cur = pre_sum[i + k] - pre_sum[i]
+            res = max(res, cur / k)
+        return res
+```
+
+### [560\. 和为 K 的子数组](https://leetcode-cn.com/problems/subarray-sum-equals-k/)
+
+
+给你一个整数数组 `nums` 和一个整数 `k` ，请你统计并返回该数组中和为 `k`的子数组的个数。
+
+**示例 1：**
+
+```
+输入：nums = [1,1,1], k = 2
+输出：2
+```
+
+**示例 2：**
+
+```
+输入：nums = [1,2,3], k = 3
+输出：2
+```
+
+**提示：**
+
+*   1 <= nums.length <= 2 * 10<sup>4</sup>
+*   -1000 <= nums[i] <= 1000
+*   -10<sup>7</sup> <= k <= 10<sup>7</sup>
+
+
+#### Solution1
+
+```python
+class Solution:
+    def subarraySum(self, nums: List[int], k: int) -> int:
+        n = len(nums)
+        pre_sum = [0] * (n + 1)
+        for i in range(n):
+            pre_sum[i + 1] = pre_sum[i] + nums[i]
+        
+        d = {0: 1}
+        res = 0
+        for i in range(n):
+            if pre_sum[i + 1] - k in d:
+                res += d[pre_sum[i + 1] - k]
+            d[pre_sum[i + 1]] = d.get(pre_sum[i + 1], 0) + 1
+        return res
+```
+
+#### Solution2 优化空间复杂度O(N) -> O(1)
+
+```python
+class Solution:
+    def subarraySum(self, nums: List[int], k: int) -> int:
+        d = {0: 1}
+        res = 0
+        pre = 0
+        for n in nums:
+            pre += n
+            if pre - k in d:
+                res += d[pre - k]
+            d[pre] = d.get(pre, 0) + 1
+        return res
+```
+
+### [974\. 和可被 K 整除的子数组](https://leetcode-cn.com/problems/subarray-sums-divisible-by-k/)
+
+
+给定一个整数数组 `nums` 和一个整数 `k` ，返回其中元素之和可被 `k` 整除的（连续、非空） **子数组** 的数目。
+
+**子数组** 是数组的 **连续** 部分。
+
+**示例 1：**
+
+```
+输入：nums = [4,5,0,-2,-3,1], k = 5
+输出：7
+解释：
+有 7 个子数组满足其元素之和可被 k = 5 整除：
+[4, 5, 0, -2, -3, 1], [5], [5, 0], [5, 0, -2, -3], [0], [0, -2, -3], [-2, -3]
+```
+
+**示例 2:**
+
+```
+输入: nums = [5], k = 9
+输出: 0
+```
+
+**提示:**
+
+*   1 <= nums.length <= 3 * 10<sup>4</sup>
+*   -10<sup>4</sup> <= nums[i] <= 10<sup>4</sup>
+*   2 <= k <= 10<sup>4</sup>
+
+
+#### Solution
+
+```pyhton
+class Solution:
+    def subarraysDivByK(self, nums: List[int], k: int) -> int:
+        n = len(nums)
+        pre_sum = [0] * (n + 1)
+        for i in range(n):
+            pre_sum[i + 1] = pre_sum[i] + nums[i]
+        
+        res = 0
+        d = {0: 1}
+        for i in range(n):
+            c = pre_sum[i + 1] % k
+            if c in d:
+                res += d[c]
+            d[c] = d.get(c, 0) + 1
+        return res
+```
+
+### [209\. 长度最小的子数组](https://leetcode-cn.com/problems/minimum-size-subarray-sum/)
+
+
+给定一个含有 `n`个正整数的数组和一个正整数 `target` **。**
+
+找出该数组中满足其和`≥ target`的长度最小的 **连续子数组** [nums<sub style="display: inline;">l</sub>, nums<sub style="display: inline;">l+1</sub>, ..., nums<sub style="display: inline;">r-1</sub>, nums<sub style="display: inline;">r</sub>] ，并返回其长度**。**如果不存在符合条件的子数组，返回 `0` 。
+
+**示例 1：**
+
+```
+输入：target = 7, nums = [2,3,1,2,4,3]
+输出：2
+解释：子数组 [4,3] 是该条件下的长度最小的子数组。
+```
+
+**示例 2：**
+
+```
+输入：target = 4, nums = [1,4,4]
+输出：1
+```
+
+**示例 3：**
+
+```
+输入：target = 11, nums = [1,1,1,1,1,1,1,1]
+输出：0
+```
+
+**提示：**
+
+*   1 <= target <= 10<sup>9</sup>
+*   1 <= nums.length <= 10<sup>5</sup>
+*   1 <= nums[i] <= 10<sup>5</sup>
+
+**进阶：**
+
+*   如果你已经实现`O(n)` 时间复杂度的解法, 请尝试设计一个 `O(n log(n))` 时间复杂度的解法。
+
+
+#### Solution1 前缀和+二分
+
+```python
+class Solution:
+    def minSubArrayLen(self, target: int, nums: List[int]) -> int:
+        res = float('inf')
+        n = len(nums)
+        pre_sum = [0] * (n + 1)
+        for i in range(n):
+            pre_sum[i + 1] = pre_sum[i] + nums[i]
+        for i in range(n):
+            # 以i为start，在i ~ n-1之间寻找区间和大于等于target的最短区间[i, end]
+            
+            l, r = i, n -1
+            while l < r:
+                mid = l + r >> 1
+                if pre_sum[mid + 1] - pre_sum[i] >= target:
+                    r = mid
+                else:
+                    l = mid + 1
+            if pre_sum[r + 1] - pre_sum[i] >= target:
+                res = min(res, r - i + 1)
+        return res if res < float('inf') else 0
+```
+
+#### Solution2 滑动窗口
+
+```python
+class Solution:
+    def minSubArrayLen(self, target: int, nums: List[int]) -> int:
+        res = float('inf')
+        n = len(nums)
+        start, end = 0, 0
+        cur_sum = 0
+        while end < n:
+            cur_sum += nums[end]
+            while start < n and cur_sum >= target:
+                res = min(res, end - start + 1)
+                cur_sum -= nums[start]
+                start += 1
+            end += 1
+        return res if res < float('inf') else 0
+```
+
+### [528\. 按权重随机选择](https://leetcode-cn.com/problems/random-pick-with-weight/)
+
+
+给你一个 **下标从 0 开始** 的正整数数组 `w` ，其中 `w[i]` 代表第 `i` 个下标的权重。
+
+请你实现一个函数 `pickIndex` ，它可以 **随机地** 从范围 `[0, w.length - 1]` 内（含 `0` 和 `w.length - 1`）选出并返回一个下标。选取下标 `i` 的 **概率** 为 `w[i] / sum(w)` 。
+
+*   例如，对于 `w = [1, 3]`，挑选下标 `0` 的概率为 `1 / (1 + 3) = 0.25` （即，25%），而选取下标 `1` 的概率为 `3 / (1 + 3) = 0.75`（即，`75%`）。
+
+**示例 1：**
+
+```
+输入：
+["Solution","pickIndex"]
+[[[1]],[]]
+输出：
+[null,0]
+解释：
+Solution solution = new Solution([1]);
+solution.pickIndex(); // 返回 0，因为数组中只有一个元素，所以唯一的选择是返回下标 0。
+```
+
+**示例 2：**
+
+```
+输入：
+["Solution","pickIndex","pickIndex","pickIndex","pickIndex","pickIndex"]
+[[[1,3]],[],[],[],[],[]]
+输出：
+[null,1,1,1,1,0]
+解释：
+Solution solution = new Solution([1, 3]);
+solution.pickIndex(); // 返回 1，返回下标 1，返回该下标概率为 3/4 。
+solution.pickIndex(); // 返回 1
+solution.pickIndex(); // 返回 1
+solution.pickIndex(); // 返回 1
+solution.pickIndex(); // 返回 0，返回下标 0，返回该下标概率为 1/4 。
+
+由于这是一个随机问题，允许多个答案，因此下列输出都可以被认为是正确的:
+[null,1,1,1,1,0]
+[null,1,1,1,1,1]
+[null,1,1,1,0,0]
+[null,1,1,1,0,1]
+[null,1,0,1,0,0]
+......
+诸若此类。
+```
+
+**提示：**
+
+*   1 <= w.length <= 10<sup>4</sup>
+*   1 <= w[i] <= 10<sup>5</sup>
+*   `pickIndex` 将被调用不超过 10<sup>4</sup> 次
+
+
+#### Solution 前缀和+二分
+
+```python
+class Solution:
+
+    def __init__(self, w: List[int]):
+        import random
+        n = len(w)
+        pre_sum = [0] * (n + 1)
+        for i in range(n):
+            pre_sum[i + 1] = pre_sum[i] + w[i]
+        self.pre_sum = pre_sum[1:]
+
+    def pickIndex(self) -> int:
+        pre_sum = self.pre_sum
+        k = random.randint(1, pre_sum[-1])
+        # 在pre_sum中查找第一个大于等于k的数，返回其索引
+        
+        l, r = 0, len(pre_sum) - 1
+        while l < r:
+            mid = l + r >> 1
+            if pre_sum[mid] >= k:
+                r = mid
+            else:
+                l = mid + 1
+        return r
+```
+
+### [238\. 除自身以外数组的乘积](https://leetcode-cn.com/problems/product-of-array-except-self/)
+
+
+给你一个整数数组 `nums`，返回 _数组 `answer` ，其中 `answer[i]` 等于 `nums` 中除 `nums[i]` 之外其余各元素的乘积_ 。
+
+题目数据 **保证** 数组 `nums`之中任意元素的全部前缀元素和后缀的乘积都在  **32 位** 整数范围内。
+
+请**不要使用除法，**且在 `O(_n_)` 时间复杂度内完成此题。
+
+**示例 1:**
+
+```
+输入: nums = [1,2,3,4]
+输出: [24,12,8,6]
+```
+
+**示例 2:**
+
+```
+输入: nums = [-1,1,0,-3,3]
+输出: [0,0,9,0,0]
+```
+
+**提示：**
+
+*   `2 <= nums.length <= 10<sup>5</sup>`
+*   `-30 <= nums[i] <= 30`
+*   **保证** 数组 `nums`之中任意元素的全部前缀元素和后缀的乘积都在  **32 位** 整数范围内
+
+**进阶：**你可以在 `O(1)` 的额外空间复杂度内完成这个题目吗？（ 出于对空间复杂度分析的目的，输出数组**不被视为**额外空间。）
+
+
+#### Solution
+
+```python
+class Solution:
+    def productExceptSelf(self, nums: List[int]) -> List[int]:
+        n = len(nums)
+        left, right = [1] * n, [1] * n
+        for i in range(1, n):
+            left[i] = left[i - 1] * nums[i - 1]
+        for i in range(n-2, -1, -1):
+            right[i] = right[i + 1] * nums[i + 1]
+        res = []
+        for i in range(n):
+            res.append(left[i] * right[i])
+        return res
+```
+
+
+
+# 二维前缀和——部分题也可直接用一维前缀和解决
+
+### [304\. 二维区域和检索 - 矩阵不可变](https://leetcode-cn.com/problems/range-sum-query-2d-immutable/)
+
+<big style="display: inline;"><small style="display: inline;">给定一个二维矩阵 `matrix`，</small></big>以下类型的多个请求：
+
+*   <big style="display: inline;"><small style="display: inline;">计算其子矩形范围内元素的总和，该子矩阵的 **左上角** 为 `(row1, col1)` ，**右下角** 为 `(row2, col2)` 。</small></big>
+
+实现 `NumMatrix` 类：
+
+*   `NumMatrix(int[][] matrix)` 给定整数矩阵 `matrix` 进行初始化
+*   `int sumRegion(int row1, int col1, int row2, int col2)` 返回<big style="display: inline;"> <small style="display: inline;">**左上角**</small></big><big style="display: inline;"> <small style="display: inline;">`(row1, col1)` 、**右下角** `(row2, col2)`</small></big> 所描述的子矩阵的元素 **总和** 。
+
+**示例 1：**
+
+![](https://tva1.sinaimg.cn/large/e6c9d24egy1h164545jsaj20bj0bj74s.jpg)
+
+```
+输入: 
+["NumMatrix","sumRegion","sumRegion","sumRegion"]
+[[[[3,0,1,4,2],[5,6,3,2,1],[1,2,0,1,5],[4,1,0,1,7],[1,0,3,0,5]]],[2,1,4,3],[1,1,2,2],[1,2,2,4]]
+输出: 
+[null, 8, 11, 12]
+
+解释:
+NumMatrix numMatrix = new NumMatrix([[3,0,1,4,2],[5,6,3,2,1],[1,2,0,1,5],[4,1,0,1,7],[1,0,3,0,5]]);
+numMatrix.sumRegion(2, 1, 4, 3); // return 8 (红色矩形框的元素总和)
+numMatrix.sumRegion(1, 1, 2, 2); // return 11 (绿色矩形框的元素总和)
+numMatrix.sumRegion(1, 2, 2, 4); // return 12 (蓝色矩形框的元素总和)
+```
+
+**提示：**
+
+*   `m == matrix.length`
+*   `n == matrix[i].length`
+*   `1 <= m, n <= 200`
+*   -10<sup>5</sup> <= matrix[ i ] [ j ] <= 10<sup>5</sup>
+*   `0 <= row1 <= row2 < m`
+*   `0 <= col1 <= col2 < n`
+*   最多调用 `10<sup>4</sup>` 次 `sumRegion` 方法
+
+
+#### Solution
+
+```python
+class NumMatrix:
+
+    def __init__(self, matrix: List[List[int]]):
+        m, n = len(matrix), len(matrix[0])
+        pre_sum = [[0] * (n + 1) for _ in range(m + 1)]
+        for i in range(m):
+            for j in range(n):
+                pre_sum[i+1][j+1] = pre_sum[i][j+1] + pre_sum[i+1][j] + matrix[i][j] - pre_sum[i][j]
+        self.pre_sum = pre_sum
+
+    def sumRegion(self, row1: int, col1: int, row2: int, col2: int) -> int:
+        pre_sum = self.pre_sum
+        return pre_sum[row2 + 1][col2 + 1] + pre_sum[row1][col1] - pre_sum[row2 + 1][col1] - pre_sum[row1][col2 + 1]
+```
+
+### [1314\. 矩阵区域和](https://leetcode-cn.com/problems/matrix-block-sum/)
+
+
+给你一个 `m x n` 的矩阵 `mat` 和一个整数 `k` ，请你返回一个矩阵 `answer` ，其中每个 `answer[i][j]` 是所有满足下述条件的元素 `mat[r][c]` 的和： 
+
+*   `i - k <= r <= i + k,`
+*   `j - k <= c <= j + k` 且
+*   `(r, c)` 在矩阵内。
+
+**示例 1：**
+
+```
+输入：mat = [[1,2,3],[4,5,6],[7,8,9]], k = 1
+输出：[[12,21,16],[27,45,33],[24,39,28]]
+```
+
+**示例 2：**
+
+```
+输入：mat = [[1,2,3],[4,5,6],[7,8,9]], k = 2
+输出：[[45,45,45],[45,45,45],[45,45,45]]
+```
+
+**提示：**
+
+*   `m == mat.length`
+*   `n == mat[i].length`
+*   `1 <= m, n, k <= 100`
+*   `1 <= mat[i][j] <= 100`
+
+
+#### Solution
+
+```python
+class Solution:
+    def matrixBlockSum(self, mat: List[List[int]], k: int) -> List[List[int]]:
+        m, n = len(mat), len(mat[0])
+        pre_sum = [[0] * (n+1) for _ in range(m+1)]
+        for i in range(m):
+            for j in range(n):
+                pre_sum[i+1][j+1] = pre_sum[i][j+1] + pre_sum[i+1][j] + mat[i][j] - pre_sum[i][j]
+
+        ans = [[0] * n for _ in range(m)]
+        for i in range(m):
+            for j in range(n):
+                up, bottom = max(i - k, 0), min(i + k, m - 1)
+                left, right = max(j - k, 0), min(j + k, n - 1)
+                ans[i][j] = pre_sum[bottom+1][right+1] - pre_sum[bottom+1][left] - pre_sum[up][right+1] + pre_sum[up][left]
+        return ans
+```
+
+### [面试题 17.24\. 最大子矩阵](https://leetcode-cn.com/problems/max-submatrix-lcci/)
+
+
+给定一个正整数、负整数和 0 组成的 N × M 矩阵，编写代码找出元素总和最大的子矩阵。
+
+返回一个数组 `[r1, c1, r2, c2]`，其中 `r1`, `c1` 分别代表子矩阵左上角的行号和列号，`r2`, `c2` 分别代表右下角的行号和列号。若有多个满足条件的子矩阵，返回任意一个均可。
+
+**注意：**本题相对书上原题稍作改动
+
+**示例：**
+
+```
+输入：
+[
+   [-1,0],
+   [0,-1]
+]
+输出：[0,1,0,1]
+解释：输入中标粗的元素即为输出所表示的矩阵
+```
+
+**说明：**
+
+*   `1 <= matrix.length, matrix[0].length <= 200`
+
+![捕获2.JPG](https://tva1.sinaimg.cn/large/e6c9d24ely1h17fd40yvgj20no086t9o.jpg)
+
+
+#### Solution1 二维前缀和
+
+```python
+class Solution:
+    def getMaxMatrix(self, matrix: List[List[int]]) -> List[int]:
+        m, n = len(matrix), len(matrix[0])
+        pre_sum = [[0] * (n+1) for _ in range(m+1)]
+        for i in range(m):
+            for j in range(n):
+                pre_sum[i+1][j+1] = pre_sum[i][j+1] + pre_sum[i+1][j] + matrix[i][j] - pre_sum[i][j]
+
+        sum_, res = float('-inf'), None
+        for up in range(m):
+            for bottom in range(up, m):
+                left = 0
+                for right in range(n):
+                    cur = pre_sum[bottom+1][right+1] - pre_sum[bottom+1][left] - pre_sum[up][right+1] + pre_sum[up][left]
+                    if cur > sum_:
+                        sum_, res = cur, [up, left, bottom, right]
+                    if cur < 0:
+                        left = right + 1
+        return res
+```
+
+#### Solution2 一维前缀和
+
+```python
+class Solution:
+    def getMaxMatrix(self, matrix: List[List[int]]) -> List[int]:
+        m, n = len(matrix), len(matrix[0])
+        pre_sum = []
+        for j in range(n):
+            cur = [0] * (m + 1)
+            for i in range(m):
+                cur[i+1] = cur[i] + matrix[i][j]
+            pre_sum.append(cur)
+
+        sum_, res = float('-inf'), None
+        for up in range(m):
+            for bottom in range(up, m):
+                cur_list = [p[bottom+1] - p[up] for p in pre_sum]
+                left = 0
+                sub_sum = 0
+                for right in range(n):
+                    sub_sum += cur_list[right]
+                    if sub_sum > sum_:
+                        sum_, res = sub_sum, [up, left, bottom, right]
+                    if sub_sum < 0:
+                        left = right + 1
+                        sub_sum = 0
+        return res
+```
+
+### [1074\. 元素和为目标值的子矩阵数量](https://leetcode-cn.com/problems/number-of-submatrices-that-sum-to-target/)
+
+
+给出矩阵 `matrix` 和目标值 `target`，返回元素总和等于目标值的非空子矩阵的数量。
+
+子矩阵 `x1, y1, x2, y2` 是满足 `x1 <= x <= x2` 且 `y1 <= y <= y2` 的所有单元 `matrix[x][y]` 的集合。
+
+如果 `(x1, y1, x2, y2)` 和 `(x1', y1', x2', y2')` 两个子矩阵中部分坐标不同（如：`x1 != x1'`），那么这两个子矩阵也不同。
+
+**示例 1：**
+
+![](https://tva1.sinaimg.cn/large/e6c9d24ely1h17ffn2qetj206q06q3ye.jpg)
+
+```
+输入：matrix = [[0,1,0],[1,1,1],[0,1,0]], target = 0
+输出：4
+解释：四个只含 0 的 1x1 子矩阵。
+```
+
+**示例 2：**
+
+```
+输入：matrix = [[1,-1],[-1,1]], target = 0
+输出：5
+解释：两个 1x2 子矩阵，加上两个 2x1 子矩阵，再加上一个 2x2 子矩阵。
+```
+
+**示例 3：**
+
+```
+输入：matrix = [[904]], target = 0
+输出：0
+```
+
+****提示：****
+
+*   `1 <= matrix.length <= 100`
+*   `1 <= matrix[0].length <= 100`
+*   `-1000 <= matrix[i] <= 1000`
+*   `-10^8 <= target <= 10^8`
+
+
+#### Solution
+
+```python
+
+```
+
+
+
+### [363\. 矩形区域不超过 K 的最大数值和](https://leetcode-cn.com/problems/max-sum-of-rectangle-no-larger-than-k/)
+
+
+给你一个 `m x n` 的矩阵 `matrix` 和一个整数 `k` ，找出并返回矩阵内部矩形区域的不超过 `k` 的最大数值和。
+
+题目数据保证总会存在一个数值和不超过 `k` 的矩形区域。
+
+**示例 1：**
+
+![](https://tva1.sinaimg.cn/large/e6c9d24ely1h17ffkvua0j207304w3ye.jpg)
+
+```
+输入：matrix = [[1,0,1],[0,-2,3]], k = 2
+输出：2
+解释：蓝色边框圈出来的矩形区域 [[0, 1], [-2, 3]] 的数值和是 2，且 2 是不超过 k 的最大数字（k = 2）。
+```
+
+**示例 2：**
+
+```
+输入：matrix = [[2,2,-1]], k = 3
+输出：3
+```
+
+**提示：**
+
+*   `m == matrix.length`
+*   `n == matrix[i].length`
+*   `1 <= m, n <= 100`
+*   `-100 <= matrix[i][j] <= 100`
+*   -10<sup>5</sup> <= k <= 10<sup>5</sup>
+
+**进阶：**如果行数远大于列数，该如何设计解决方案？
+
+
+#### Solution
+
+```python
+
+```
+
+### [862\. 和至少为 K 的最短子数组](https://leetcode-cn.com/problems/shortest-subarray-with-sum-at-least-k/)
+
+
+给你一个整数数组 `nums` 和一个整数 `k` ，找出 `nums` 中和至少为 `k` 的 **最短非空子数组** ，并返回该子数组的长度。如果不存在这样的 **子数组** ，返回 `-1` 。
+
+**子数组** 是数组中 **连续** 的一部分。
+
+**示例 1：**
+
+```
+输入：nums = [1], k = 1
+输出：1
+```
+
+**示例 2：**
+
+```
+输入：nums = [1,2], k = 4
+输出：-1
+```
+
+**示例 3：**
+
+```
+输入：nums = [2,-1,2], k = 3
+输出：3
+```
+
+**提示：**
+
+*   1 <= nums.length <= 10<sup>5</sup>
+*   -10<sup>5</sup> <= nums[i] <= 10<sup>5</sup>
+*   1 <= k <= 10<sup>9</sup>
+
+
+#### Solution
+
+```python
+
+```
+
