--- a/_posts/2022-03-02-leetcode_专项突击_动态规划.md
+++ b/_posts/2022-03-02-leetcode_专项突击_动态规划.md
@@ -15,3 +15,25 @@ tags:
 https://leetcode-cn.com/leetbook/read/dynamic-programming-1-plus/xch21e/
 
 https://leetcode-cn.com/leetbook/read/dynamic-programming-2-plus/xclk9g/
+
+
+
+# 背包系列
+
+https://leetcode-cn.com/problems/combination-sum-iv/solution/xi-wang-yong-yi-chong-gui-lu-gao-ding-bei-bao-wen-/
+
+## 背包模板
+
+
+
+# 股票买卖
+
+
+
+# 拆分系列
+
+单词拆分
+
+整数拆分
+
+# 其他
