--- a/_posts/2022-03-02-leetcode_专项突击_二分查找系列.md
+++ b/_posts/2022-03-02-leetcode_专项突击_二分查找系列.md
@@ -116,7 +116,7 @@ def binary_search(l, r):
 
 
 
-<img src="https://tva1.sinaimg.cn/large/e6c9d24ely1h0umzaj2umj20u00vfq5c.jpg" alt="image-20220401232634542" style="zoom: 50%;" />
+<img src="/Users/bingjian.yan/Desktop/e6c9d24ely1h0umzaj2umj20u00vfq5c.png" alt="image-20220401232634542" style="zoom: 50%;" />
 
 
 
@@ -327,6 +327,46 @@ class Solution:
 
 **标签**
 `数组` `二分查找` 
+
+## solution0 大雪菜模板写法
+
+```python
+class Solution:
+    def searchRange(self, nums: List[int], target: int) -> List[int]:
+        if not nums:
+            return [-1, -1]
+        n = len(nums)
+        res = []
+
+        # 找第一个位置，就是在nums中找第一个大于等于target的数
+        
+        l, r = 0, n - 1
+        while l < r:
+            mid = l + r >> 1
+            if nums[mid] >= target:
+                r = mid
+            else:
+                l = mid + 1
+        if r < n and nums[r] == target:
+            res.append(r)
+        else:
+            return [-1, -1]
+        
+        # 找最后一个位置，就是在nums中找第一个最后一个小于等于target的数
+        
+        l, r = 0, n - 1
+        while l < r:
+            mid = l + r + 1 >> 1
+            if nums[mid] <= target:
+                l = mid
+            else:
+                r = mid - 1
+        if res[0] <= r < n and nums[r] == target:
+            res.append(r)
+        return res
+```
+
+
 
 ## solution1 寻找第一个大于target-1的数和第一个大于target的数
 
@@ -1278,6 +1318,119 @@ class Solution:
 
 >
 
+# 274.H 指数
+
+[https://leetcode-cn.com/problems/h-index](https://leetcode-cn.com/problems/h-index) 
+
+## 原题
+
+给你一个整数数组 `citations` ，其中 `citations[i]` 表示研究者的第 `i` 篇论文被引用的次数。计算并返回该研究者的 ** `h` 指数** 。
+
+根据维基百科上 <a href="https://baike.baidu.com/item/h-index/3991452?fr=aladdin" target="_blank">h 指数的定义</a>：h 代表“高引用次数”，一名科研人员的 `h` **指数** 是指他（她）的 （ `n` 篇论文中） **总共** 有 `h` 篇论文分别被引用了 **至少** `h` 次。且其余的 *`n - h`* 篇论文每篇被引用次数 **不超过** *`h`* 次。
+
+如果 `h` 有多种可能的值， ** `h` 指数** 是其中最大的那个。
+
+ 
+
+ **示例 1：** 
+
+```
+输入：citations = [3,0,6,1,5]
+输出：3 
+解释：给定数组表示研究者总共有 5 篇论文，每篇论文相应的被引用了 3, 0, 6, 1, 5 次。
+     由于研究者有 3 篇论文每篇 至少 被引用了 3 次，其余两篇论文每篇被引用 不多于 3 次，所以她的 h 指数是 3。
+```
+
+ **示例 2：** 
+
+```
+输入：citations = [1,3,1]
+输出：1
+
+```
+
+
+ **提示：** 
+
+-  `n == citations.length` 
+-  `1 <= n <= 5000` 
+-  `0 <= citations[i] <= 1000` 
+
+**标签**
+`数组` `计数排序` `排序` 
+
+## solution1 直接使用sort，O(nlogn)
+
+```python
+class Solution:
+    def hIndex(self, citations: List[int]) -> int:
+        n = len(citations)
+        citations.sort(reverse=True)
+        res = 0
+        for i in range(n):
+            if citations[i] >= i + 1:
+                res = i + 1
+            else:
+                break
+        return res
+```
+
+
+
+## soluton2 二分，O(nlogn)
+
+-   https://leetcode-cn.com/problems/h-index/solution/gong-shui-san-xie-li-yong-er-duan-xing-z-1jxw/
+-   hIndex只可能在`[0, n]`的范围内，其中`n`是发表论文的总篇数，即`len(citations)`
+-   问题转为在`[0, n]`的范围内找一个最大的数`i`，且满足有`i`篇论文至少引用了`i`次
+
+```python
+class Solution:
+    def hIndex(self, citations: List[int]) -> int:
+        def check(mid):
+            ans = 0
+            for c in citations:
+                ans += c >= mid
+            return ans >= mid
+
+        n = len(citations)
+        l, r = 0, n
+        while l < r:
+            mid = l + r + 1 >> 1
+            if check(mid):
+                l = mid
+            else:
+                r = mid - 1
+        return l
+```
+
+
+
+## solution3 计数排序，O(n)
+
+-   `counter`记录当前引用次数的论文有几篇
+-   从后向前遍历数组 `counter`，得到大于或等于当前引用次数`i`的总论文数`res`，如果`res >= i`，表示有超过`i`篇论文大于或等于引用次数`i`，直接返回即可。
+
+```python
+class Solution:
+    def hIndex(self, citations: List[int]) -> int:
+        n = len(citations)
+        counter = [0] * (n + 1)
+        for c in citations:
+            if c >= n:
+                counter[n] += 1
+            else:
+                counter[c] += 1
+        
+        res = 0
+        for i in range(n, -1, -1):
+            res += counter[i]
+            if res >= i:
+                return i
+        return 0
+```
+
+>
+
 # 275.H 指数 II
 
 [https://leetcode-cn.com/problems/h-index-ii](https://leetcode-cn.com/problems/h-index-ii) 
@@ -1322,11 +1475,56 @@ class Solution:
 **标签**
 `数组` `二分查找` 
 
+https://leetcode-cn.com/problems/h-index-ii/solution/by-umbrella-3t-qleu/
 
-##
+## solution1 从大到小
+
+-   反转citations
+-   mid及其左边一共有mid+1篇论文
+-   引用数是递减的，因此引用数超过citations[mid]的论文一共有mid+1篇
+-   如果citations[mid] >= mid+1，那么引用数超过mid+1的论文一共有mid+1篇
+    -   此时找到的hIndex为mid+1，我们想找更大的hIndex，即想找更大的`i+1`
+    -   应该到`[mid, r]`范围内找这样的`i`，因此设置`l = mid`
+-   否则`mid`不是一个可行解，因此设置`r = mid - 1`
 
 ```python
+class Solution:
+    def hIndex(self, citations: List[int]) -> int:
+        citations = citations[::-1]
+        n = len(citations)
+        l, r = 0, n - 1
+        while l < r:
+            mid = l + r + 1 >> 1
+            if citations[mid] >= mid+1:
+                l = mid
+            else:
+                r = mid - 1
+        return r+1 if citations[r] >= r+1 else 0
+```
 
+
+
+## solution2 从小到大
+
+-   mid及其右边一共有n-mid篇论文
+-   引用数是递增的，因此引用数超过citations[mid]的论文一共有n-mid篇
+-   如果citations[mid] >= n-mid，那么引用数超过n-mid的论文一共有n-mid篇
+    -   此时找到的hIndex为n-mid，我们想找更大的hIndex，即想找更大的`n-i`
+    -   应该到`[l, mid]`范围内找这样的`i`，因此设置`r = mid`
+-   否则`mid`不是一个可行解，因此设置`l = mid + 1`
+
+```python
+class Solution:
+    def hIndex(self, citations: List[int]) -> int:
+        n = len(citations)
+        l, r = 0, n - 1
+        while l < r:
+            mid = l + r >> 1
+            if citations[mid] >= n-mid:
+                r = mid
+            else:
+                l = mid + 1
+        return n-r if citations[r] >= n-r else 0
 ```
 
 >
@@ -1456,17 +1654,17 @@ class Solution:
 class Solution:
     def findDuplicate(self, nums: List[int]) -> int:
         n = len(nums) - 1
-        left, right = 1, n
-        while left < right:
-            mid = left + ((right - left) >> 1)
+        l, r = 1, n
+        while l < r:
+            mid = l + ((r - l) >> 1)
             cnt = 0
-            for a in nums:
-                cnt += a <= mid
-            if cnt > mid:
-                right = mid
+            for i in nums:
+                cnt += i <= mid
+            if cnt <= mid:
+                l = mid + 1
             else:
-                left = mid + 1
-        return left
+                r = mid
+        return l
 ```
 
 
@@ -1480,16 +1678,16 @@ class Solution:
 ```python
 class Solution:
     def findDuplicate(self, nums: List[int]) -> int:
-        slow, fast = nums[0], nums[nums[0]]
+        slow, fast = 0, 0
+        slow, fast = nums[slow], nums[nums[fast]]
         while slow != fast:
             slow = nums[slow]
             fast = nums[nums[fast]]
-        
         cur = 0
         while slow != cur:
             slow = nums[slow]
             cur = nums[cur]
-        return cur
+        return slow
 ```
 
 >
@@ -1549,37 +1747,44 @@ class Solution:
 ```python
 class Solution:
     def lengthOfLIS(self, nums: List[int]) -> int:
-        dp = [1] * len(nums)
-        for i in range(len(nums)):
+        n = len(nums)
+        dp = [1] * n
+        for i in range(n):
             for j in range(i):
                 if nums[j] < nums[i]:
-                    dp[i] = max(dp[i], dp[j]+1)
+                    dp[i] = max(dp[i], dp[j] + 1)
         return max(dp)
 ```
 
-## solution2 dp+二分
+## solution2 贪心+二分
+
+-   考虑一个简单的贪心，如果我们要使上升子序列尽可能的长，则我们需要让序列上升得尽可能慢，因此我们希望每次在上升子序列最后加上的那个数尽可能的小。
+-   具体实现过程，遍历`nums`
+    -   `cells`中维护一个严格单调递增的序列
+    -   如果当前的`nums[i] > cells[-1]`，说明当前的`nums[i]`比`cells`中的所有数都大，直接加入`cells`
+    -   如果当前的`nums[i] <= cells[-1]`，需要在当前的`cells`中找一个数，这个数等于`nums[i]`，或者是第一个比`nums[i]`的数，使用`nums[i]`替换这个数
 
 ```python
 class Solution:
     def lengthOfLIS(self, nums: List[int]) -> int:
-        length = len(nums)
-        if length < 2:
-            return length
-        cells = [nums[0]]
-        for i in range(1, length):
-            if nums[i] > cells[-1]:
+        def findFirstBiggerOrEqualNumber(cells, target):
+            l, r = 0, len(cells)-1
+            while l < r:
+                mid = l + ((r - l) >> 1)
+                if cells[mid] < target:
+                    l = mid + 1
+                else:
+                    r = mid
+            return l
+
+        n = len(nums)
+        cells = []
+        for i in range(n):
+            if not cells or cells[-1] < nums[i]:
                 cells.append(nums[i])
             else:
-                # nums[i]替换cells中比nums[i]大的最小数
-                
-                l, r = 0, len(cells)-1
-                while l < r:
-                    mid = l + ((r - l) >> 1)
-                    if cells[mid] < nums[i]:
-                        l = mid + 1
-                    else:
-                        r = mid
-                cells[l] = nums[i]
+                idx = findFirstBiggerOrEqualNumber(cells, nums[i])
+                cells[idx] = nums[i]
         return len(cells)
 ```
 
@@ -1621,24 +1826,81 @@ class Solution:
 **标签**
 `数组` `哈希表` `双指针` `二分查找` `排序` 
 
-## solution1 哈希
+## solution1 库函数
 
 ```python
+class Solution:
+    def intersection(self, nums1: List[int], nums2: List[int]) -> List[int]:
+        return list(set(nums1) & set(nums2))
 ```
 
-
-
-## solution2 排序+双指针
+## solution2 哈希
 
 ```python
+class Solution:
+    def intersection(self, nums1: List[int], nums2: List[int]) -> List[int]:
+        nums1_set = set(nums1)
+        res = []
+        for n in nums2:
+            if n in nums1_set:
+                res.append(n)
+                nums1_set.remove(n)
+        return res
 ```
 
-
-
-## solution3 排序+双指针+哈希
+## solution3 排序+二分
 
 ```python
+class Solution:
+    def intersection(self, nums1: List[int], nums2: List[int]) -> List[int]:
+        def find_target(nums, target):
+            length = len(nums)
+            l, r = 0, length -1
+            while l <= r:
+                mid = l + ((r - l) >> 1)
+                if nums[mid] == target:
+                    return mid
+                elif nums[mid] < target:
+                    l = mid + 1
+                else:
+                    r = mid - 1
+            return -1
+        
+        nums1.sort()
+        nums2.sort()
+        res = []
+        for i, n in enumerate(nums1):
+            if i > 0 and nums1[i] == nums1[i-1]:
+                continue
+            idx = find_target(nums2, n)
+            if idx != -1:
+                res.append(n)
+        return res
+```
 
+## solution4 排序+双指针
+
+```python
+class Solution:
+    def intersection(self, nums1: List[int], nums2: List[int]) -> List[int]:
+        nums1.sort()
+        nums2.sort()
+        m, n = len(nums1), len(nums2)
+        i, j = 0, 0
+        res = []
+        while i < m and j < n:
+            n1 = nums1[i] if i < m else float('inf')
+            n2 = nums2[j] if j < n else float('inf')
+            if n1 == n2:
+                if not res or res[-1] != nums1[i]:
+                    res.append(nums1[i])
+                i += 1
+                j += 1
+            elif n1 > n2:
+                j += 1
+            else:
+                i += 1
+        return res
 ```
 
 >
@@ -1684,14 +1946,53 @@ class Solution:
 **标签**
 `数组` `哈希表` `双指针` `二分查找` `排序` 
 
-
-##
+## solution1 哈希
 
 ```python
-
+class Solution:
+    def intersect(self, nums1: List[int], nums2: List[int]) -> List[int]:
+        nums1_dict = Counter(nums1)
+        res = []
+        for n in nums2:
+            if n in nums1_dict:
+                res.append(n)
+                nums1_dict[n] -= 1
+                if nums1_dict[n] == 0:
+                    del nums1_dict[n]
+        return res
 ```
 
->
+## solution2 排序+双指针
+
+```python
+class Solution:
+    def intersect(self, nums1: List[int], nums2: List[int]) -> List[int]:
+        nums1.sort()
+        nums2.sort()
+        m, n = len(nums1), len(nums2)
+        i, j = 0, 0
+        res = []
+        while i < m and j < n:
+            n1 = nums1[i] if i < m else float('inf')
+            n2 = nums2[j] if j < n else float('inf')
+            if n1 == n2:
+                res.append(nums1[i])
+                i += 1
+                j += 1
+            elif n1 > n2:
+                j += 1
+            else:
+                i += 1
+        return res
+```
+
+## solution3 排序+双指针+二分
+
+```python
+过于生硬，不够优雅
+```
+
+>   
 
 # 374.猜数字大小
 
@@ -1756,7 +2057,19 @@ class Solution:
 ##
 
 ```python
-
+class Solution:
+    def guessNumber(self, n: int) -> int:
+        l, r = 1, n
+        while l <= r:
+            mid = l + ((r - l) >> 1)
+            cur = guess(mid)
+            if cur == 0:
+                return mid
+            elif cur == 1:
+                l = mid + 1
+            else:
+                r = mid - 1
+        return l
 ```
 
 >
@@ -1796,11 +2109,36 @@ class Solution:
 **标签**
 `数学` `二分查找` 
 
+## solution
 
-##
+https://leetcode-cn.com/problems/nth-digit/solution/gong-shui-san-xie-jian-dan-mo-ni-ti-by-a-w5wl/
+
+-   首先确定第n个数是几位数中的
+    -   len位数的数字范围为[10<sup>len-1</sup>, 10<sup>len</sup>-1]，长度为len * 9 * 10 <sup>len-1</sup>
+    -   不断减小n，且增加len，直到n <= len * 9 * 10 <sup>len-1</sup>
+-   接着确定n是len位数中的第几个
+    -   第1个数到第len个数都在len位数中的第一个，都等于10 <sup>len-1</sup> + 0
+    -   第len个数到第2*len个数都在len位数中的第二个，都等于10 <sup>len-1</sup> + 1
+-   最后确定n是len位数num中的第几位
+    -   在len位数中的第n个数是 len位数num中的 第idx位
+        -   如果n % len_ == 0，那么就是最后一位
+        -   否则是 n % len_ - 1位
+    -   可以合并为n % len_ - 1，因为如果n % len_ == 0， 那么取str(num)[-1]，即最后一位
 
 ```python
-
+class Solution:
+    def findNthDigit(self, n: int) -> int:
+        len_, base = 1, 1
+        while n > len_ * 9 * base:
+            n -= len_ * 9 * base
+            len_ += 1
+            base *= 10
+        num = base + (n - 1) // len_
+        idx = n % len_ - 1 if n % len_ != 0 else len_ - 1
+        return int(str(num)[idx])
+      
+        # return int(str(num)[n % len_ - 1])
+        
 ```
 
 >
@@ -1917,11 +2255,38 @@ class Solution:
 **标签**
 `数组` `二分查找` `排序` 
 
+## solution
 
-##
+-    `intervals`对左端点排序得到`sorted_intervals`
+-   在`sorted_intervals`所有区间左端点中找到满足条件的最小值
+    -   如果左端点小于right，那么应该在`[mid + 1, r]`之间找
+    -   否则在`[l, mid]`之间找
 
 ```python
+class Solution:
+    def findRightInterval(self, intervals: List[List[int]]) -> List[int]:
+        intervals = [tuple(interval) for interval in intervals]
 
+        d = {}
+        for i, interval in enumerate(intervals):
+            d[interval] = i
+        
+        sorted_intervals = sorted(intervals, key=lambda x: x[0])
+
+        res = []
+        for left, right in intervals:
+            l, r = 0, len(sorted_intervals) - 1
+            while l < r:
+                mid = l + r >> 1
+                if sorted_intervals[mid][0] < right:
+                    l = mid + 1
+                else:
+                    r = mid
+            if sorted_intervals[r][0] >= right:
+                res.append(d[sorted_intervals[r]])
+            else:
+                res.append(-1)
+        return res
 ```
 
 >
