--- a/_posts/2022-03-02-leetcode_专项突击_整数系列.md
+++ b/_posts/2022-03-02-leetcode_专项突击_整数系列.md
@@ -12,8 +12,323 @@ tags:
 
 专项突击——整数系列
 
-7.整数反转
+### [7\. 整数反转](https://leetcode-cn.com/problems/reverse-integer/)
 
-8.字符串转换整数
 
-9.回文数
+给你一个 32 位的有符号整数 `x` ，返回将 `x` 中的数字部分反转后的结果。
+
+如果反转后整数超过 32 $位的有符号整数的范围[−2<sup>31</sup>,  2<sup>31 </sup>− 1]，就返回 0。
+
+**假设环境不允许存储 64 位整数（有符号或无符号）。**
+
+**示例 1：**
+
+```
+输入：x = 123
+输出：321
+```
+
+**示例 2：**
+
+```
+输入：x = -123
+输出：-321
+```
+
+**示例 3：**
+
+```
+输入：x = 120
+输出：21
+```
+
+**示例 4：**
+
+```
+输入：x = 0
+输出：0
+```
+
+**提示：**
+
+*   -2<sup>31</sup> <= x <= 2<sup>31</sup> - 1
+
+#### Solution
+
+https://leetcode-cn.com/problems/reverse-integer/solution/tu-jie-7-zheng-shu-fan-zhuan-by-wang_ni_ma/
+
+-   正数
+    -   如果某个数字大于 214748364那后面就不用再判断了，肯定溢出了。
+    -   如果某个数字等于 214748364呢，这对应到上图中第三、第四、第五排的数字，需要要跟最大数的末尾数字比较，如果这个数字比7还大，说明溢出了。
+
+![2.jpg](https://tva1.sinaimg.cn/large/e6c9d24ely1h12pyro1a5j20gr0b1jsh.jpg)
+
+-   负数
+    -   如果某个数字**小于** `-214748364`说明溢出了
+    -   如果某个数字**等于** `-214748364`，还需要跟最小数的末尾比较，即看它是否小于`8`
+
+![3.jpg](https://tva1.sinaimg.cn/large/e6c9d24ely1h12pyrri5xj20gu0aydh2.jpg)
+
+```c++
+class Solution {
+public:
+    int reverse(int x) {
+        int res = 0;
+        while (x != 0) {
+            int remainder = x % 10;
+            if (res > 214748364 || (res == 214748364 and remainder > 7)) {
+                return 0;
+            }
+            if (res < -214748364 || (res == -214748364 and remainder < -8)) {
+                return 0;
+            }
+            res = 10 * res + remainder;
+            x /= 10;
+        }
+        return res;
+    }
+};
+```
+
+
+
+```python
+class Solution:
+    def reverse(self, x: int) -> int:
+        res = 0
+        x1 = abs(x)
+        while x1 != 0:
+            remainder = x1 % 10
+            if res > 214748364 or (res == 214748364 and remainder > 7):
+                return 0
+            res = 10 * res + remainder
+            x1 //= 10
+        return res if x == abs(x) else -res
+```
+
+### [8\. 字符串转换整数 (atoi)](https://leetcode-cn.com/problems/string-to-integer-atoi/)
+
+
+请你来实现一个 `myAtoi(string s)` 函数，使其能将字符串转换成一个 32 位有符号整数（类似 C/C++ 中的 `atoi` 函数）。
+
+函数 `myAtoi(string s)` 的算法如下：
+
+1.  读入字符串并丢弃无用的前导空格
+2.  检查下一个字符（假设还未到字符末尾）为正还是负号，读取该字符（如果有）。 确定最终结果是负数还是正数。 如果两者都不存在，则假定结果为正。
+3.  读入下一个字符，直到到达下一个非数字字符或到达输入的结尾。字符串的其余部分将被忽略。
+4.  将前面步骤读入的这些数字转换为整数（即，"123" -> 123， "0032" -> 32）。如果没有读入数字，则整数为 `0` 。必要时更改符号（从步骤 2 开始）。
+5.  如果整数数超过 32 位有符号整数范围 [−2<sup>31</sup>,  2<sup>31 </sup>− 1] ，需要截断这个整数，使其保持在这个范围内。具体来说，小于 −2<sup>31</sup> 的整数应该被固定为 −2<sup>31</sup> ，大于 2<sup>31 </sup>− 1 的整数应该被固定为 2<sup>31 </sup>− 1 。
+6.  返回整数作为最终结果。
+
+**注意：**
+
+*   本题中的空白字符只包括空格字符 `' '` 。
+*   除前导空格或数字后的其余字符串外，**请勿忽略** 任何其他字符。
+
+**示例 1：**
+
+```
+输入：s = "42"
+输出：42
+解释：加粗的字符串为已经读入的字符，插入符号是当前读取的字符。
+第 1 步："42"（当前没有读入字符，因为没有前导空格）
+         ^
+第 2 步："42"（当前没有读入字符，因为这里不存在 '-' 或者 '+'）
+         ^
+第 3 步："42"（读入 "42"）
+           ^
+解析得到整数 42 。
+由于 "42" 在范围 [-231, 231 - 1] 内，最终结果为 42 。
+```
+
+**示例 2：**
+
+```
+输入：s = "   -42"
+输出：-42
+解释：
+第 1 步："   -42"（读入前导空格，但忽视掉）
+            ^
+第 2 步："   -42"（读入 '-' 字符，所以结果应该是负数）
+             ^
+第 3 步："   -42"（读入 "42"）
+               ^
+解析得到整数 -42 。
+由于 "-42" 在范围 [-231, 231 - 1] 内，最终结果为 -42 。
+```
+
+**示例 3：**
+
+```
+输入：s = "4193 with words"
+输出：4193
+解释：
+第 1 步："4193 with words"（当前没有读入字符，因为没有前导空格）
+         ^
+第 2 步："4193 with words"（当前没有读入字符，因为这里不存在 '-' 或者 '+'）
+         ^
+第 3 步："4193 with words"（读入 "4193"；由于下一个字符不是一个数字，所以读入停止）
+             ^
+解析得到整数 4193 。
+由于 "4193" 在范围 [-2^31, 2^31 - 1] 内，最终结果为 4193 。
+```
+
+**提示：**
+
+*   `0 <= s.length <= 200`
+*   `s` 由英文字母（大写和小写）、数字（`0-9`）、`' '`、`'+'`、`'-'` 和 `'.'` 组成
+
+
+#### Solution
+
+```python
+class Solution:
+    def myAtoi(self, s: str) -> int:
+        s = s.lstrip()
+        if not s:
+            return 0
+        is_positive = True
+        if s[0] in ["+", "-"]:
+            if s[0] == "-":
+                is_positive = False
+            s = s[1:]
+        
+        i = 0
+        res = 0
+        l = len(s)
+        while i < l and s[i].isdigit():
+            res = 10 * res + ord(s[i]) - ord('0')
+            i += 1
+            if i < l and s[i].isdigit():
+                if is_positive and (res > 214748364 or (res == 214748364 and ord(s[i]) - ord('0') > 7)):
+                    return 2147483647
+                if not is_positive and (res > 214748364 or (res == 214748364 and ord(s[i]) - ord('0') > 8)):
+                    return -2147483648
+
+        return res if is_positive else -res
+```
+
+
+
+### [9\. 回文数](https://leetcode-cn.com/problems/palindrome-number/)
+
+ 给你一个整数 `x` ，如果 `x` 是一个回文整数，返回 `true` ；否则，返回 `false` 。
+
+回文数是指正序（从左向右）和倒序（从右向左）读都是一样的整数。
+
+*   例如，`121` 是回文，而 `123` 不是。
+
+**示例 1：**
+
+```
+输入：x = 121
+输出：true
+```
+
+**示例 2：**
+
+```
+输入：x = -121
+输出：false
+解释：从左向右读, 为 -121 。 从右向左读, 为 121- 。因此它不是一个回文数。
+```
+
+**示例 3：**
+
+```
+输入：x = 10
+输出：false
+解释：从右向左读, 为 01 。因此它不是一个回文数。
+```
+
+**提示：**
+
+*   -2<sup>31</sup> <= x <= 2<sup>31</sup> - 1
+
+**进阶：**你能不将整数转为字符串来解决这个问题吗？
+
+
+#### Solution
+
+```python
+class Solution:
+    def isPalindrome(self, x: int) -> bool:
+        if x < 0:
+            return False
+        if x == 0:
+            return True
+        x1 = x
+        reversed_x = 0
+        while x1 != 0:
+            remainder = x1 % 10
+            if reversed_x > 214748364 or (reversed_x == 214748364 and remainder > 7):
+                return False
+            reversed_x = 10 * reversed_x + remainder
+            x1 //= 10
+        return x == reversed_x
+```
+
+### [29\. 两数相除](https://leetcode-cn.com/problems/divide-two-integers/)
+
+
+给定两个整数，被除数 `dividend` 和除数 `divisor`。将两数相除，要求不使用乘法、除法和 mod 运算符。
+
+返回被除数 `dividend` 除以除数 `divisor` 得到的商。
+
+整数除法的结果应当截去（`truncate`）其小数部分，例如：`truncate(8.345) = 8` 以及 `truncate(-2.7335) = -2`
+
+**示例 1:**
+
+```
+输入: dividend = 10, divisor = 3
+输出: 3
+解释: 10/3 = truncate(3.33333..) = truncate(3) = 3
+```
+
+**示例 2:**
+
+```
+输入: dividend = 7, divisor = -3
+输出: -2
+解释: 7/-3 = truncate(-2.33333..) = -2
+```
+
+**提示：**
+
+*   被除数和除数均为 32 位有符号整数。
+*   除数不为 0。
+*   假设我们的环境只能存储 32 位有符号整数，其数值范围是 [−2<sup>31</sup>,  2<sup>31 </sup>− 1]。本题中，如果除法结果溢出，则返回 2<sup>31 </sup>− 1。
+
+
+#### Solution
+
+```python
+class Solution:
+    def divide(self, dividend: int, divisor: int) -> int:
+        m, n = abs(dividend), abs(divisor)
+        is_negative = True if (dividend < 0) ^ (divisor < 0) else False
+        res = 0
+        while m >= n:
+            p = 1
+            t = n
+            while m >= (t << 1):
+                t <<= 1
+                p <<= 1
+            res += p
+            m -= t
+        res = res if not is_negative else -res
+        res = 2147483647 if res > 2147483647 else res
+        res = -2147483648 if res < -2147483648 else res
+        return res
+```
+
+
+
+
+
+
+
+
+
+
+
